# mimicry

./: .gitmodules  CMakeLists.txt  build.sh  skia.args  third_party.cmake
.github/workflows/: ci.yml  main.yml
lib/debug/: CMakeLists.txt
lib/debug/include/: debug.h
lib/debug/src/: debug.cpp
src/: main.cpp
